--- a/recipecss.css
+++ b/recipecss.css
@@ -82,7 +82,7 @@ figure:hover{
     opacity: 0.8;
 }
 .div1{
-    background-image:url('E:/Google Download/ana-azevedo-3o_7XOrqGcA-unsplash.jpg');
+    background-image:url('https://github.com/vikiye/portfolio/blob/Pictures/ana-azevedo-3o_7XOrqGcA-unsplash.jpg');
     background-repeat: no-repeat;
     background-position: right top;
     background-size:contain;
